--- a/style.css
+++ b/style.css
@@ -235,6 +235,10 @@ h2 {
 
 .top-info {
   text-align: center;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  gap: 20px;
 }
 
 .grid-box {
