--- a/style.css
+++ b/style.css
@@ -132,6 +132,20 @@ header {
   position: absolute;
   top: 50px;
   left: -50px;
+  animation: rotating 4000ms linear infinite;
+}
+
+@-webkit-keyframes rotating /* Safari and Chrome */ {
+  from {
+    -webkit-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  to {
+    -webkit-transform: rotate(360deg);
+    -o-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
 }
 
 .left-panel {
