--- a/style.css
+++ b/style.css
@@ -158,7 +158,6 @@ header {
   border-top-left-radius: 30px;
   border-bottom-left-radius: 30px;
   gap: 104px;
-  width: 100%;
   width: 50%;
   background-color: #e7fafe;
 }
@@ -441,8 +440,24 @@ footer {
     gap: 15px;
   }
 
- 
+  .left-panel {
+    padding: 35px;
+    width: 100%;
+    border-radius: 30px;
+   
+  }
+  .right-panel {
+    display: none;
   
+  }
+ 
+  .main-button {
+    padding: 12px 26px;
+  }
+
+  .secondary {
+    padding: 12px 26px;
+  }
   
 }
 
