--- a/style.css
+++ b/style.css
@@ -1,10 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
 
+/* Couleur Princiaple du site */
 :root {
   --bg-primaire: #ffffff;
   --text-primaire: #000000;
 }
 
+/* Remise a 0 des styles par defauts */
 * {
   margin: 0;
   padding: 0;
@@ -24,10 +26,7 @@ body {
   padding: 0 15px;
 }
 
-.title {
-  color: var(--text-primaire);
-}
-
+/* Barre de Navigation */
 nav {
   padding: 40px 0;
   width: 100%;
@@ -59,6 +58,7 @@ li {
   cursor: pointer;
 }
 
+/* Header */
 .badge {
   display: flex;
   align-items: center;
@@ -125,7 +125,7 @@ li {
 }
 
 header {
-  margin: 20px 0px ;
+  margin: 20px 0px;
   border-radius: 30px;
   display: flex;
   width: 100%;
@@ -184,6 +184,7 @@ header {
   color: rgba(0, 0, 0, 0.6);
 }
 
+/* Catégorie*/
 .box {
   width: 180px;
   height: 202px;
@@ -196,8 +197,7 @@ header {
   gap: 50px;
   cursor: pointer;
   background: #e8e8e8;
-  box-shadow: 20px 20px 60px #e7e6e6,
-     -20px -20px 60px #ffffff;
+  box-shadow: 20px 20px 60px #e7e6e6, -20px -20px 60px #ffffff;
 }
 
 .categorie-title {
@@ -239,7 +239,8 @@ h2 {
   cursor: pointer;
 }
 
-.grid{
+/* Recettes*/
+.grid {
   display: grid;
   grid-template-columns: repeat(3, 400px);
   row-gap: 50px;
@@ -275,6 +276,7 @@ h2 {
   gap: 24px;
 }
 
+/* Partie réassurance */
 section {
   display: flex;
   justify-content: space-between;
@@ -285,19 +287,18 @@ section img {
   max-width: 50vw;
 }
 
-.chef-info div{
+.chef-info div {
   display: flex;
   flex-direction: column;
   gap: 24px;
-  margin-bottom: 86px
+  margin-bottom: 86px;
 }
 
 .chef-info > * {
   max-width: 520px;
 }
 
-
-
+/* Posts Insta */
 .insta-section {
   display: flex;
   align-items: center;
@@ -306,8 +307,12 @@ section img {
   padding: 80px 0;
   margin: 80px 0;
   width: 100%;
-  background: rgb(231,249,253);
-  background: linear-gradient(180deg, rgba(231,249,253,0) 0%, rgba(231,249,253,1) 100%);
+  background: rgb(231, 249, 253);
+  background: linear-gradient(
+    180deg,
+    rgba(231, 249, 253, 0) 0%,
+    rgba(231, 249, 253, 1) 100%
+  );
 }
 
 .insta-img img {
@@ -320,7 +325,8 @@ section img {
   justify-content: center;
 }
 
-form{
+/* Formulaire d'action*/
+form {
   display: flex;
   align-items: center;
   background-color: #ffffff;
@@ -332,7 +338,7 @@ form{
 }
 
 .input-section {
-  background-color: rgb(231,249,253);
+  background-color: rgb(231, 249, 253);
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -344,7 +350,7 @@ form{
   overflow: hidden;
 }
 
-input{
+input {
   width: 100%;
   height: 100%;
   border: none;
@@ -361,7 +367,6 @@ input:focus {
   position: absolute;
   bottom: 0;
   left: 0;
- 
 }
 
 .input-section::after {
@@ -369,9 +374,9 @@ input:focus {
   position: absolute;
   bottom: 0;
   right: 0;
- 
 }
 
+/* Footer */
 .footer-top {
   display: flex;
   justify-content: space-between;
@@ -397,41 +402,34 @@ input:focus {
   justify-content: space-between;
 }
 
-
-
 footer {
   margin: 160px 0 48px 0;
 }
 
-
+/* Responsive web */
 @media (max-width: 1250px) {
-  .grid{
-   
+  .grid {
     grid-template-columns: repeat(3, 320px);
-    
   }
 
   h1 {
     font-size: 48px;
-    
   }
   h2 {
     font-size: 30px;
   }
 
-  .main-button, .secondary, .badge, .light-text {
+  .main-button,
+  .secondary,
+  .badge,
+  .light-text {
     font-size: 12px;
   }
-
- 
-  
 }
 
 @media (max-width: 1000px) {
-  .grid{
-   
+  .grid {
     grid-template-columns: repeat(2, 300px);
-    
   }
 
   .menu {
@@ -446,13 +444,11 @@ footer {
     padding: 35px;
     width: 100%;
     border-radius: 30px;
-   
   }
   .right-panel {
     display: none;
-  
   }
- 
+
   .main-button {
     padding: 12px 26px;
   }
@@ -460,15 +456,13 @@ footer {
   .secondary {
     padding: 12px 26px;
   }
-  
 }
 
 @media (max-width: 650px) {
-  .grid{
+  .grid {
     grid-template-columns: repeat(1, 80%);
     flex-direction: column;
     display: flex;
-    
   }
 
   .input-section {
@@ -477,40 +471,39 @@ footer {
 
   h1 {
     font-size: 36px;
-    
   }
 
-form{
-  width: auto;
-}
+  form {
+    width: auto;
+  }
 
-input {
-  font-size: 10px;
-}
+  input {
+    font-size: 10px;
+  }
 
-.input-section::before {
-  display: none;
-}
+  .input-section::before {
+    display: none;
+  }
 
-.input-section::after {
-  display: none;
-}
-.insta-img img {
-  margin: 20px 0;
-}
-.insta-img {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
-}
+  .input-section::after {
+    display: none;
+  }
+  .insta-img img {
+    margin: 20px 0;
+  }
+  .insta-img {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+  }
 
-section {
-  flex-direction: column;
-}
+  section {
+    flex-direction: column;
+  }
 
-section img {
-  max-width: 90vw;
-  margin-top: 25px;
-}
+  section img {
+    max-width: 90vw;
+    margin-top: 25px;
+  }
 }
